// Vitest Snapshot v1

exports[`Search > Search actionVue demo works fine 1`] = `
<div
  class="example-search"
>
  <div
    class="t-search"
  >
    <div
      class="t-search__input-box t-search__input-box--square"
    >
      
      <svg
        class="t-icon t-icon-search"
        fill="none"
        height="1em"
        style="font-size: 24px;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      
      <input
        autofocus=""
        class="t-input__keyword"
        placeholder="搜索预设文案"
        type="search"
      />
      <!--v-if-->
    </div>
    
    <div
      class="t-search__search-action"
      style="display: none;"
    >
      取消
    </div>
    
  </div>
</div>
`;

exports[`Search > Search baseVue demo works fine 1`] = `
<div
  class="example-search"
>
  <div
    class="t-search"
  >
    <div
      class="t-search__input-box t-search__input-box--square"
    >
      
      <svg
        class="t-icon t-icon-search"
        fill="none"
        height="1em"
        style="font-size: 24px;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      
      <input
        class="t-input__keyword"
        placeholder="请输入关键字"
        type="search"
      />
      <!--v-if-->
    </div>
    
    <!--v-if-->
    
  </div>
</div>
`;

exports[`Search > Search mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Search 搜索框123
  </h1>
  <p
    class="summary"
  >
    用于用户输入搜索信息，并进行页面内容搜索。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础搜索框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="example-search"
      >
        <div
          class="t-search"
        >
          <div
            class="t-search__input-box t-search__input-box--square"
          >
            
            <svg
              class="t-icon t-icon-search"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            
            <input
              class="t-input__keyword"
              placeholder="请输入关键字"
              type="search"
            />
            <!--v-if-->
          </div>
          
          <!--v-if-->
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        获取焦点后显示取消按钮
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="example-search"
      >
        <div
          class="t-search"
        >
          <div
            class="t-search__input-box t-search__input-box--square"
          >
            
            <svg
              class="t-icon t-icon-search"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            
            <input
              autofocus=""
              class="t-input__keyword"
              placeholder="搜索预设文案"
              type="search"
            />
            <!--v-if-->
          </div>
          
          <div
            class="t-search__search-action"
            style="display: none;"
          >
            取消
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        搜索框形状
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="example-search"
      >
        <div
          class="t-search"
        >
          <div
            class="t-search__input-box t-search__input-box--round"
          >
            
            <svg
              class="t-icon t-icon-search"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            
            <input
              class="t-input__keyword"
              placeholder="请输入关键字"
              type="search"
            />
            <!--v-if-->
          </div>
          
          <!--v-if-->
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        默认状态其他对齐方式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="example-search"
      >
        <div
          class="t-search"
        >
          <div
            class="t-search__input-box t-search__input-box--square"
          >
            
            <svg
              class="t-icon t-icon-search"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            
            <input
              class="t-input__keyword"
              placeholder="搜索预设文案"
              type="search"
            />
            <!--v-if-->
          </div>
          
          <!--v-if-->
          
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Search > Search otherVue demo works fine 1`] = `
<div
  class="example-search"
>
  <div
    class="t-search"
  >
    <div
      class="t-search__input-box t-search__input-box--square"
    >
      
      <svg
        class="t-icon t-icon-search"
        fill="none"
        height="1em"
        style="font-size: 24px;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      
      <input
        class="t-input__keyword"
        placeholder="搜索预设文案"
        type="search"
      />
      <!--v-if-->
    </div>
    
    <!--v-if-->
    
  </div>
</div>
`;

exports[`Search > Search shapeVue demo works fine 1`] = `
<div
  class="example-search"
>
  <div
    class="t-search"
  >
    <div
      class="t-search__input-box t-search__input-box--round"
    >
      
      <svg
        class="t-icon t-icon-search"
        fill="none"
        height="1em"
        style="font-size: 24px;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      
      <input
        class="t-input__keyword"
        placeholder="请输入关键字"
        type="search"
      />
      <!--v-if-->
    </div>
    
    <!--v-if-->
    
  </div>
</div>
`;
